<resources>
    <string name="app_name">ChalkboardNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_schedule">Schedule</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_tools">Tools</string>

    <string name="menu_share">Share</string>

    <string name="menu_send">Send</string>


    -
    <string name="forgot">

<u>Forgot Password?</u>

</string>
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="upload">Upload</string>
</resources>
