<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlContainer_hometutor"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddURL_hometutor"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/exoregular"
        android:includeFontPadding="false"
        android:text="Add URL"
        android:textColor="@android:color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL_hometutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddURL_hometutor"
        app:layout_constraintTop_toTopOf="@id/imageAddURL_hometutor"
        />

    <EditText
        android:id="@+id/inputURL_hometutor"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:hint="Enter url"
        android:fontFamily="@font/exoregular"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textWebEditText"
        android:autoLink="web"
        android:linksClickable="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="13dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL_hometutor"
        />

    <Button
        android:id="@+id/textAdd_hometutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/exoregular"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURL_hometutor"

        />


    <Button
        android:id="@+id/textCancel_hometutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/exoregular"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd_hometutor"
        app:layout_constraintTop_toBottomOf="@id/inputURL_hometutor"

        />

</androidx.constraintlayout.widget.ConstraintLayout>